Add front page picture

--- a/pages/index.html
+++ b/pages/index.html
@@ -7,7 +7,7 @@ permalink: /
 <section class="intro">
   <div class="grid">
     <div class="unit whole center-on-mobiles">
-      <p class="first">Cambridge - UNAH</p>
+      <p class="first" style="color:white;">Cambridge - UNAH</p>
     </div>
   </div>
 </section>
@@ -30,6 +30,10 @@ permalink: /
               Within this project, the University of Cambridge will work with the Universidad Nacional Aut6noma de Huanta (UNAH) to establish environmental research facilities and capabilities based at UNAH to promote long-term environmental research.
               </p>
             <a href="/docs/home/">Documentation &rarr;</a>
+
+            <br><br><br>
+            <img style="width:100%; height: auto;" src="/assets/intro_pic_001.JPG" alt="Field Work">
+
           </div>
         </div>
         <div class="clear"></div>
