Fix redirect to UNAH

--- a/pages/index.html
+++ b/pages/index.html
@@ -29,7 +29,7 @@ permalink: /
               <br><br>
               Within this project, the University of Cambridge will work with the Universidad Nacional Aut6noma de Huanta (UNAH) to establish environmental research facilities and capabilities based at UNAH to promote long-term environmental research.
               </p>
-            <a href="/docs/home/">Documentation &rarr;</a>
+            <a href="/docs/">Documentation &rarr;</a>
 
             <br><br><br>
             <img style="width:100%; height: auto;" src="/assets/intro_pic_001.JPG" alt="Field Work">
