--- a/pages/index.html
+++ b/pages/index.html
@@ -61,7 +61,7 @@ permalink: /
     <div class="unit one-third">
       <h2>Open Access</h2>
       <p>
-        All of our data and results are free and available to anyone. If you have comments or suggestions, please contact us!
+        All of our data and results will be free and available to anyone. If you have comments or suggestions, please contact us!
       </p>
       <!-- <a href="http://import.jekyllrb.com">Migrate your blog &rarr;</a> -->
     </div>
