--- a/pages/index.html
+++ b/pages/index.html
@@ -27,7 +27,7 @@ permalink: /
               <br><br>
               The development of rapid and accurate methods and technologies for environmental monitoring and impact analysis is now a global priority. This presents a complex challenge in the highly diverse environments of Peru where altitude ranges from sea level to 5000m, temperature can range from -20C to 48C, and much of the country is remote and inaccessible. It is in this context that the University of Cambridge has started a program investigating a range ofnew and developing technologies and methods for Environmental Impact Analysis.
               <br><br>
-              Within this project, the University of Cambridge will work with the Universidad Nacional Aut6noma de Huanta (UNAH) to establish environmental research facilities and capabilities based at UNAH to promote long-term environmental research.
+              Within this project, the University of Cambridge will work with the Universidad Nacional Autónoma de Huanta (UNAH) to establish environmental research facilities and capabilities based at UNAH to promote long-term environmental research.
               </p>
             <a href="/docs/">Documentation &rarr;</a>
 
